force-app/main/default/objects/Forecast_Item__c/fields/BU_Approval__c.field-meta.xml
<CustomField>
    <fullName>BU_Approval__c</fullName>
    <inlineHelpText>Dedicated for Item Type - Opportunity Product</inlineHelpText>
    <label>BU Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>