force-app/main/default/objects/Forecast_Item__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <label>Forecast Month</label>
    <referenceTo>Forecast_Month__c</referenceTo>
    <relationshipLabel>Forecast Items</relationshipLabel>
    <relationshipName>Forecast_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>