force-app/main/default/objects/Forecast_Item__c/fields/Forecast_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Adjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast Adjustment</label>
    <referenceTo>Forecast_Adjustment__c</referenceTo>
    <relationshipLabel>Forecast Items</relationshipLabel>
    <relationshipName>Forecast_Items</relationshipName>
    <type>Lookup</type>
</CustomField>