force-app/main/default/objects/Forecast_Item__c/fields/Forecast_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast Opportunity</label>
    <referenceTo>Forecast_Opportunity__c</referenceTo>
    <relationshipLabel>Forecast Items</relationshipLabel>
    <relationshipName>Forecast_Items</relationshipName>
    <type>Lookup</type>
</CustomField>