force-app/main/default/objects/Forecast_Item__c/fields/Fulfillment_Month__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Month__c</fullName>
    <formula>Forecast__r.Month__c</formula>
    <label>Fulfillment Month</label>
    <type>Date</type>
</CustomField>