force-app/main/default/objects/Forecast_Item__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Product</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Current Order</fullName>
            </value>
            <value>
                <fullName>Previous Year Order</fullName>
            </value>
            <value>
                <fullName>Base</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>