force-app/main/default/objects/Forecast_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Forecast__c</columns>
    <columns>Active__c</columns>
    <columns>Fulfillment__c</columns>
    <columns>Quantity__c</columns>
    <columns>External_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order_Product__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fulfillment__c</field>
        <operation>equals</operation>
        <value>Local Warehouse</value>
    </filters>
    <label>All</label>
</ListView>