force-app/main/default/objects/Forecast_Item__c/listViews/Artur_forecast_edits.listView-meta.xml
<ListView>
    <fullName>Artur_forecast_edits</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Artur forecast edits</label>
</ListView>